services/lifexp/k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lifexp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lifexp
spec:
  hosts:
  - "*"
  gateways:
  - lifexp-gateway
  http:
  - match:
    - uri:
        exact: /api/lifexp
    route:
    - destination:
        host: lifexp
        port:
          number: 8080
